-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 9
-
Component/s: infrastructure
-
b127
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8374818 | openjdk8u492 | Sergey Bylokhov | P3 | Resolved | Fixed | b01 |
I have a fully updated copy of Arch Linux and these are the commands I'm using to build the JDK:
$ hg clone http://hg.openjdk.java.net/jdk9/hs/ jdk9-hs
$ cd jdk9-hs
$ sh get_source.sh
$ bash configure
$ make
The output from `make` is attached. As you can see, there are multiple failures. This bug report is specifically for the failures caused by left-shifting a negative number.
$ hg clone http://hg.openjdk.java.net/jdk9/hs/ jdk9-hs
$ cd jdk9-hs
$ sh get_source.sh
$ bash configure
$ make
The output from `make` is attached. As you can see, there are multiple failures. This bug report is specifically for the failures caused by left-shifting a negative number.
- backported by
-
JDK-8374818 JDK9 does not compile on Linux with GCC 6.1 because left-shifting a negative number has undefined behavior
-
- Resolved
-
- relates to
-
JDK-8152856 Xcode 7.3 -Wshift-negative-value compile failure on Mac OS X
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk8u-dev/5e3692f7
-
Review(master)
openjdk/jdk8u-dev/682