8157758: JDK9 does not compile on Linux with GCC 6.1 because left-shifting a negative number has undefined behavior

Replace shifts of -1 with shifts of ~0u.

Reviewed-by: kbarrett, mockner